made the blog post responsive

--- a/style.css
+++ b/style.css
@@ -177,6 +177,35 @@ h1 a{
 }
 
 
+@media only screen and (min-width: 610px) and (max-width: 1200px){
+    
+#blog{
+    background: #f4e4c1;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-around;
+}
+
+#blog h1{
+    color: #080f5b;
+    text-align: center;
+    font-size: 15px;
+}
+
+h1 a{
+    text-decoration: none;
+    color: #0d19a3;
+    font-size: 20px;
+    text-align: center;
+}
+
+#blog img{
+    width: 450px;
+    height: 250px;
+    border-radius: 17px;
+}
+}
 
 
 
