--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+
+
+::-webkit-scrollbar-track{
+    background-color: #303c6c;
+}
+ 
+
+::-webkit-scrollbar{
+    background: #182628;
+}
 body{
     font-family: 'Lobster Two', cursive;
     font-family: 'Roboto', sans-serif;
@@ -112,7 +122,7 @@ body{
 }
 
 #blog{
-    background: #f4e4c1;
+    background: #303c6c;
     display: flex;
     align-items: center;
     align-content: center;
@@ -120,13 +130,13 @@ body{
 }
 
 #blog h1{
-    color: #080f5b;
+    color: #f4976c;
     text-align: center;
 }
 
 h1 a{
     text-decoration: none;
-    color: #0d19a3;
+    color: #fff;
     font-size: 40px;
     text-align: center;
 }
@@ -145,11 +155,11 @@ h1 a{
     font-weight: bold;
     margin-top: 2px;
     color: #080f5b;
-    background-color: #f4e4c1;
+    background-color: #15db95;
 }
 
 #blog{
-    background: #f4e4c1;
+    background: #303c6c;
     display: flex;
     align-items: center;
     align-content: center;
@@ -157,14 +167,14 @@ h1 a{
 }
 
 #blog h1{
-    color: #080f5b;
+    color: #f4976c;
     text-align: center;
     font-size: 11px;
 }
 
 h1 a{
     text-decoration: none;
-    color: #0d19a3;
+    color: #fff;
     font-size: 15px;
     text-align: center;
 }
@@ -180,7 +190,7 @@ h1 a{
 @media only screen and (min-width: 610px) and (max-width: 1200px){
     
 #blog{
-    background: #f4e4c1;
+    background: #303c6c;
     display: flex;
     align-items: center;
     align-content: center;
@@ -188,14 +198,14 @@ h1 a{
 }
 
 #blog h1{
-    color: #080f5b;
+    color: #f4976c;
     text-align: center;
     font-size: 15px;
 }
 
 h1 a{
     text-decoration: none;
-    color: #0d19a3;
+    color: #fff;
     font-size: 20px;
     text-align: center;
 }
@@ -207,6 +217,22 @@ h1 a{
 }
 }
 
+
+
+
+
+
+
+
+
+/*---------------footer-------*/
+.footer-container{
+    display: block;
+    color: #687864;
+    height: 100%;
+    width: 100%;
+    background-color: #182628;
+}
 
 
 
