--- a/shop.css
+++ b/shop.css
@@ -16,7 +16,7 @@
     width: auto;
     height: auto;
     cursor: pointer;
-    border: 1px solid #303c6c;
+    border: none;
     border-radius: 5px;
 }
 
@@ -63,12 +63,12 @@
 
 
 .main .shop-container #my-button{
-    width: 120px;
+    width: 150px;
     border: none;
     color: #fff;
     height: 30px;
     border-radius: 2px;
-    background: #ff5c2b;
+    background:#000;
     cursor: pointer;
     margin: 7px;
 }
@@ -93,7 +93,7 @@
         width: auto;
         height: auto;
         cursor: pointer;
-        border: 1px solid #303c6c;
+        border: none;
         border-radius: 5px;
     }
     
@@ -145,9 +145,10 @@
         color: #fff;
         height: 20px;
         border-radius: 2px;
-        background: #ff5c2b;
+        background:#000;
         cursor: pointer;
         margin: 4px;
+        font-size: 9px;
     }
     
     
@@ -155,8 +156,59 @@
 
 
 
+ /* shop search bar/button */
 
 
+
+
+ .group {
+    margin: auto;
+    display: flex;
+    line-height: 28px;
+    align-items: center;
+    position: relative;
+    max-width: 190px;
+    padding-top: 20px;
+   }
+   
+   .input {
+    width: 100%;
+    height: 40px;
+    line-height: 28px;
+    padding: 0 1rem;
+    padding-left: 2.5rem;
+    border: 2px solid #777;
+    border-radius: 8px;
+    outline: none;
+    background-color: #f3f3f4;
+    color: #0d0c22;
+    transition: .3s ease;
+   }
+   
+   .input::placeholder {
+    color: #9e9ea7;
+   }
+   
+   .input:focus, input:hover {
+    outline: none;
+    border-color: rgba(234,76,137,0.4);
+    background-color: #fff;
+    box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
+   }
+   
+   .icon {
+    position: absolute;
+    left: 1rem;
+    fill: #9e9ea7;
+    width: 1rem;
+    height: 1rem;
+   }
+   
+   
+   
+   
+   
+   
 
 
 
